# rust_game

./: .gitignore  Cargo.toml  design  devlog
assets/: dot.ron
assets/texture/: dot.ron  readme.txt  skybox.ron
config/: bindings.ron  display_config.ron
mod_prototype/: mod.toml
resources/: display_config.ron
src/: diffeq.rs  main.rs  states.rs
src/ecs/: __gravity_sys.rs  gravity_comp.rs  gravity_sys.rs  kinematic_comp.rs  mod.rs  physics_sys.rs
src/rules/: load_rules.py
